src/test/ui/error-codes/E0659.stderr
error[E0659]: `foo` is ambiguous
  --> $DIR/E0659.rs:25:15
   |
LL |     collider::foo(); //~ ERROR E0659
   |               ^^^ ambiguous name
   |
note: `foo` could refer to the name imported here
  --> $DIR/E0659.rs:20:13
   |
LL |     pub use moon::*;
   |             ^^^^^^^
note: `foo` could also refer to the name imported here
  --> $DIR/E0659.rs:21:13
   |
LL |     pub use earth::*;
   |             ^^^^^^^^
   = note: consider adding an explicit import of `foo` to disambiguate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
